--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@react-native-community/masked-view": "^0.1.11",
     "@react-navigation/bottom-tabs": "^6.4.0",
     "@react-navigation/native": "^6.0.13",
+    "@react-navigation/native-stack": "^6.9.1",
     "@react-navigation/stack": "^6.3.4",
     "expo": "~46.0.16",
     "expo-font": "^10.2.1",
