--- a/package.json
+++ b/package.json
@@ -17,17 +17,21 @@
     "@react-navigation/native-stack": "^6.9.1",
     "@react-navigation/stack": "^6.3.4",
     "expo": "~46.0.16",
+    "expo-camera": "~12.3.0",
     "expo-font": "^10.2.1",
     "expo-image-picker": "^13.3.1",
+    "expo-location": "~14.3.0",
+    "expo-media-library": "~14.2.0",
     "expo-splash-screen": "^0.16.2",
     "expo-status-bar": "~1.4.0",
+    "install": "^0.13.0",
     "react": "18.0.0",
     "react-native": "0.69.6",
     "react-native-gesture-handler": "~2.5.0",
+    "react-native-maps": "0.31.1",
     "react-native-reanimated": "~2.9.1",
     "react-native-safe-area-context": "4.3.1",
     "react-native-screens": "~3.15.0",
-    "react-native-svg": "^13.5.0",
     "react-redux": "^8.0.5"
   },
   "devDependencies": {
