--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@expo/vector-icons": "^13.0.0",
+    "@react-native-async-storage/async-storage": "^1.17.11",
     "@react-native-community/masked-view": "^0.1.11",
     "@react-navigation/bottom-tabs": "^6.4.0",
     "@react-navigation/elements": "^1.3.6",
@@ -25,7 +26,7 @@
     "expo-media-library": "~14.2.0",
     "expo-splash-screen": "^0.16.2",
     "expo-status-bar": "~1.4.0",
-    "firebase": "^9.14.0",
+    "firebase": "^7.24.0",
     "install": "^0.13.0",
     "react": "18.0.0",
     "react-native": "0.69.6",
