--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@expo/vector-icons": "^13.0.0",
+    "@react-native-async-storage/async-storage": "^1.19.0",
     "@react-native-community/masked-view": "^0.1.11",
     "@react-navigation/bottom-tabs": "^6.4.0",
     "@react-navigation/elements": "^1.3.6",
@@ -17,24 +18,24 @@
     "@react-navigation/native-stack": "^6.9.1",
     "@react-navigation/stack": "^6.3.4",
     "@reduxjs/toolkit": "^1.9.0",
-    "expo": "~46.0.16",
-    "expo-camera": "~12.3.0",
-    "expo-font": "^10.2.1",
-    "expo-image-picker": "^13.3.1",
-    "expo-location": "~14.3.0",
-    "expo-media-library": "~14.2.0",
-    "expo-splash-screen": "^0.16.2",
-    "expo-status-bar": "~1.4.0",
+    "expo": "^49.0.0",
+    "expo-camera": "~13.4.2",
+    "expo-font": "~11.4.0",
+    "expo-image-picker": "~14.3.1",
+    "expo-location": "~16.0.0",
+    "expo-media-library": "~15.4.0",
+    "expo-splash-screen": "~0.20.4",
+    "expo-status-bar": "~1.6.0",
+    "expo-updates": "~0.18.8",
     "firebase": "^7.24.0",
-    "react": "18.0.0",
-    "react-native": "0.69.6",
-    "react-native-gesture-handler": "~2.5.0",
-    "react-native-maps": "0.31.1",
-    "react-native-reanimated": "~2.9.1",
-    "react-native-safe-area-context": "4.3.1",
-    "react-native-screens": "~3.15.0",
-    "react-redux": "^8.0.5",
-    "expo-updates": "~0.14.7"
+    "react": "18.2.0",
+    "react-native": "0.72.1",
+    "react-native-gesture-handler": "~2.12.0",
+    "react-native-maps": "1.7.1",
+    "react-native-reanimated": "~3.3.0",
+    "react-native-safe-area-context": "4.6.3",
+    "react-native-screens": "~3.22.0",
+    "react-redux": "^8.0.5"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9"
